...
    <!--
    ##############################################
    # FORM FEATURES
    ##############################################
    -->
    <!-- Name of button displayed when a screen contains multiple questions populated by an external app: https://docs.getodk.org/launch-apps-from-collect/#launching-external-apps-to-populate-multiple-fields -->
    <string name="launch_app">Launch</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="no_app">The requested application is missing. Please manually enter the reading.</string>
    <string name="null_intent_value">The external application did not provide expected information.</string>

    <string name="launch_printer">Initiate Printing</string>
    <string name="no_printer">The requested printer is not installed. Please install the printer.</string>
...

    <string name="number_picker_title">Number Picker</string>
    <string name="invalid_range_widget">This widget has invalid parameters!</string>

    <string name="svg_file_does_not_exist">SVG file does not exist!</string>

    <string name="capture_image">Take Picture</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected_invalid_image">Selected file is not a valid image</string>
    <string name="view_image">View Image</string>
    <string name="take_picture_instruction">Tap the screen to take a picture</string>
    <string name="error_front_camera_unavailable">Front camera not available on this device</string>
    <string name="camera_error">This device doesn\'t support the Camera2 API.</string>
    <string name="annotate_image">Annotate Image</string>
...

    <string name="capture_video">Record Video</string>
    <string name="choose_video">Choose Video</string>
    <string name="view_video">View Video</string>
    <string name="start_video_capture_instruction">Tap the screen to start recording</string>
    <string name="stop_video_capture_instruction">Recording started. Tap again to stop</string>
    <string name="play_video">Play Video</string>

    <string name="choose_file">Choose File</string>

    <!-- Text for button that deletes a file that is the answer to a question -->
    <string name="delete_answer_file">Delete</string>

...
